<resources>
    <string name="app_name">LegoTestApp</string>
    <string name="lego">Lego</string>
    <string name="background_image">background</string>
    <string name="select_level">Выберите уровень</string>
    <string name="btn_newbie_mode">Новичок</string>
    <string name="btn_advanced_mode">Опытный</string>
    <string name="btn_start_main">Начать</string>
    <string name="btn_reset">Сброс</string>
    <string name="main_title">Лего тест</string>
    <string name="level">Уровень:</string>
    <string name="level1">Уровень 1</string>
    <string name="img_question">Изображение вопроса</string>
    <string name="question_text">Укажите название детали</string>
    <string name="question_dialog_description">В этом уровне тебе предстоит указать название детали,\n изображенной на рисунке.</string>
    <string name="btn_close_dialog">X</string>
    <string name="btn_continue">Продолжить</string>
    <string name="p_q_4_1">зубчатая передача</string>
    <string name="p_q_4_2">червячная передача</string>
    <string name="p_q_4_3">ременная передача</string>
    <string name="p_q_4_4">ременная, перекрестная передача</string>
    <string name="p_q_5_2">реечная передача</string>
    <string name="p_q_5_3">зубчатая передача под углом 90 градусов</string>
    <string name="p_q_8_1">мотор</string>
    <string name="p_q_8_2">датчик наклона</string>
    <string name="p_q_8_3">датчик расстояния</string>
    <string name="p_q_8_4">коммутатор</string>
    <string name="back">Назад</string>
    <string name="finish">Завершить</string>
    <string name="next">Далее</string>
    <string name="commit">Подтвердить</string>
    <string name="p_result">Результат:</string>
    <string name="p_bck_q">К вопросам</string>
    <string name="p_to_main">В начало</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number10">10</string>
    <string name="number11">11</string>
    <string name="number12">12</string>
    <string name="number13">13</string>
    <string name="number14">14</string>
    <string name="number15">15</string>
    <string name="number16">16</string>
    <string name="number17">17</string>
    <string name="number18">18</string>
    <string name="number19">19</string>
    <string name="number20">20</string>
    <string name="number21">21</string>
    <string name="number22">22</string>
    <string name="number23">23</string>
    <string name="number24">24</string>
    <string name="number25">25</string>
    <string name="number26">26</string>
    <string name="number27">27</string>
    <string name="number28">28</string>
    <string name="proff_q_1">1.	Выберите один объект в каждом столбике, который считаете не соответствующим тематике механики.</string>
    <string name="proff_q_2">2.	Дополните конструкцию. Выберите только один элемент, отвечающий наиболее логичному использованию (прокручивайте вниз).</string>
    <string name="proff_q_3">3.	Найдите деталь датчик расстояния из набора LEGO WeDo:</string>
    <string name="proff_q_4">4.	Какой вид передачи изображен на рисунке?</string>
    <string name="proff_q_5">5.	Какой вид передачи изображен на рисунке?</string>
    <string name="proff_q_6">6.	Какой вид передачи изображен на рисунке?</string>
    <string name="proff_q_7">7.	Какой вид передачи изображен на рисунке?</string>
    <string name="proff_q_8">8.	Выберите деталь из набора LEGO WeDo:</string>
    <string name="proff_q_9">9.	Какая из передач, изображенных ниже, холостая?</string>
    <string name="proff_q_10">10. Определите тип передачи подвижной части робота:</string>
    <string name="about_newbie">Простые вопросы с выбором ответа.</string>
    <string name="about_proff">Более сложные вопросы с выбором одного или нескольких ответов.</string>
</resources>
