<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_land">

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/btn_press"
        android:gravity="center"
        android:onClick="onClick2"
        android:padding="20dp"
        android:text="@string/btn_reset"
        android:textColor="#737373"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/container3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/btn_press"
                    android:onClick="onClick2"
                    android:text="@string/back" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="150dp">

                <LinearLayout
                    android:id="@+id/container4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/line1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/btn_press"
                            android:gravity="center"
                            android:onClick="onClick2"
                            android:text="@string/number1"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/btn_press"
                            android:gravity="center"
                            android:onClick="onClick2"
                            android:text="@string/number2"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/btn_press"
                            android:gravity="center"
                            android:onClick="onClick2"
                            android:text="@string/number3"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/btn_press"
                            android:gravity="center"
                            android:onClick="onClick2"
                            android:text="@string/number4"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/btn_press"
                            android:gravity="center"
                            android:onClick="onClick2"
                            android:text="@string/number5"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/btn_press"
                            android:gravity="center"
                            android:onClick="onClick2"
                            android:text="@string/number6"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/btn_press"
                            android:gravity="center"
                            android:onClick="onClick2"
                            android:text="@string/number7"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/btn_press"
                            android:gravity="center"
                            android:onClick="onClick2"
                            android:text="@string/number8"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/btn_press"
                            android:gravity="center"
                            android:onClick="onClick2"
                            android:text="@string/number9"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/btn_press"
                            android:gravity="center"
                            android:onClick="onClick2"
                            android:text="@string/number10"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>