<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogbackground"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/previewbackground"
    android:orientation="vertical"
    android:scaleType="centerCrop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/btn_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:background="@drawable/btn_press"
            android:gravity="center"
            android:text="@string/btn_close_dialog"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:text="@string/question_dialog_description"
            android:textColor="@color/black80"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@drawable/btn_press"
            android:text="@string/btn_continue"
            android:textColor="@color/black80"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</LinearLayout>